tools/tests/ui/fail/l1016.cnf
// Test file for error code: L1016
// Expected error: Invalid Syntax character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
